# counting_methods_2

./: .gitignore  pyproject.toml
task1/: dev.py  main.py  test.py
task10/: lib.py  main.py  test.py
task11/: main.py  test.py
task2/: main.py  test.py
task3/: main.py  test.py
task4/: main.py  test.py
task5/: main.py  test.py
task6/: lib.py  main.py  test.py
task7/: main.py  test.py
task8/: main.py  test.py
task9/: main.py  test.py
